<RelativeLayout
    style="@style/style_fragment_root"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.v7.widget.CardView style="@style/style_card" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:layout_centerVertical="true"
            android:gravity="bottom|center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:lines="1"
                android:text="@string/text_label_welcome"
                android:textColor="@android:color/black"
                android:textSize="@dimen/abc_action_bar_default_height_material" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/text_label_controls"
                android:textColor="@android:color/black"
                android:textSize="@dimen/abc_action_bar_content_inset_material" />

            <Button
                android:id="@+id/button_next"
                style="@style/buttons"
                android:layout_gravity="right"
                android:text="@string/button_next" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>
